# cmp202

./: CMakeLists.txt  avx_support.hpp  colour_chunk.hpp  compute_avx.hpp  compute_scalar.hpp  mandelbrot.cpp  mandelbrot_parallel.cpp  thread_pool.hpp  type_defs.cpp  type_defs.hpp  write_csv.hpp
